test/testdata/classes/methods/properties/write_only_error.lox
class Foo {
    // error: write-only properties are not allowed
    set bar(value) {
        this._bar = value;
    }
}

_ = Foo; // suppress unused declaration error
